tmp_scripts/output/out_test.txt

> tribesbot0.5@0.0.1 test
> jest tests/reproduction.test.js

FAIL tests/reproduction.test.js
  ● Test suite failed to run

    SyntaxError: /Users/kevinmitcham/Documents/workspace/TribesAgent/tests/reproduction.test.js: Unexpected token, expected "," (1625:52)

      1623 |   var gameState = {
      1624 |     population: {
    > 1625 |       p1: { name: 'p1', gender: 'male', activi      p1: { ntion', inviteList: ['p2'], inviteIndex: 0, responseDic      p1: { name::       p1: { name: 'p1', gender: 'male', activi      p1: { ntion', in: [      p1: { na: 0      p1: { na:       p1: { name: 'sages: { p1:      p1: { name: 'p1tivity:       p1: { name: 'p1', gender: 'male', in      p1: { name: 'p1', gender: 'male', e.messages['p1']).toContain('wait');
           |                                                     ^
      1626 | });
      1627 |
      1628 | test('globalMatingCheck resolves consent directly dictionary', () => {

      at toParseError (node_modules/@babel/parser/src/parse-error.ts:95:45)
      at Parser.raise (node_modules/@babel/parser/src/tokenizer/index.ts:1503:19)
      at Parser.unexpected (node_modules/@babel/parser/src/tokenizer/index.ts:1543:16)
      at Parser.expect (node_modules/@babel/parser/src/parser/util.ts:158:12)
      at Parser.parseObjectLike (node_modules/@babel/parser/src/parser/expression.ts:2049:14)
      at Parser.parseExprAtom (node_modules/@babel/parser/src/parser/expression.ts:1165:21)
      at Parser.parseExprSubscripts (node_modules/@babel/parser/src/parser/expression.ts:728:23)
      at Parser.parseUpdate (node_modules/@babel/parser/src/parser/expression.ts:707:21)
      at Parser.parseMaybeUnary (node_modules/@babel/parser/src/parser/expression.ts:669:23)
      at Parser.parseMaybeUnaryOrPrivate (node_modules/@babel/parser/src/parser/expression.ts:403:14)
      at Parser.parseExprOps (node_modules/@babel/parser/src/parser/expression.ts:415:23)
      at Parser.parseMaybeConditional (node_modules/@babel/parser/src/parser/expression.ts:370:23)
      at Parser.parseMaybeAssign (node_modules/@babel/parser/src/parser/expression.ts:301:21)
      at callback (node_modules/@babel/parser/src/parser/expression.ts:257:12)
      at Parser.allowInAnd (node_modules/@babel/parser/src/parser/expression.ts:3149:12)
      at Parser.parseMaybeAssignAllowIn (node_modules/@babel/parser/src/parser/expression.ts:256:17)
      at Parser.parseObjectProperty (node_modules/@babel/parser/src/parser/expression.ts:2290:16)
      at Parser.parseObjPropValue (node_modules/@babel/parser/src/parser/expression.ts:2350:12)
      at Parser.parsePropertyDefinition (node_modules/@babel/parser/src/parser/expression.ts:2193:17)
      at Parser.parseObjectLike (node_modules/@babel/parser/src/parser/expression.ts:2060:21)
      at Parser.parseExprAtom (node_modules/@babel/parser/src/parser/expression.ts:1165:21)
      at Parser.parseExprSubscripts (node_modules/@babel/parser/src/parser/expression.ts:728:23)
      at Parser.parseUpdate (node_modules/@babel/parser/src/parser/expression.ts:707:21)
      at Parser.parseMaybeUnary (node_modules/@babel/parser/src/parser/expression.ts:669:23)
      at Parser.parseMaybeUnaryOrPrivate (node_modules/@babel/parser/src/parser/expression.ts:403:14)
      at Parser.parseExprOps (node_modules/@babel/parser/src/parser/expression.ts:415:23)
      at Parser.parseMaybeConditional (node_modules/@babel/parser/src/parser/expression.ts:370:23)
      at Parser.parseMaybeAssign (node_modules/@babel/parser/src/parser/expression.ts:301:21)
      at callback (node_modules/@babel/parser/src/parser/expression.ts:257:12)
      at Parser.allowInAnd (node_modules/@babel/parser/src/parser/expression.ts:3149:12)
      at Parser.parseMaybeAssignAllowIn (node_modules/@babel/parser/src/parser/expression.ts:256:17)
      at Parser.parseObjectProperty (node_modules/@babel/parser/src/parser/expression.ts:2290:16)
      at Parser.parseObjPropValue (node_modules/@babel/parser/src/parser/expression.ts:2350:12)
      at Parser.parsePropertyDefinition (node_modules/@babel/parser/src/parser/expression.ts:2193:17)
      at Parser.parseObjectLike (node_modules/@babel/parser/src/parser/expression.ts:2060:21)
      at Parser.parseExprAtom (node_modules/@babel/parser/src/parser/expression.ts:1165:21)
      at Parser.parseExprSubscripts (node_modules/@babel/parser/src/parser/expression.ts:728:23)
      at Parser.parseUpdate (node_modules/@babel/parser/src/parser/expression.ts:707:21)
      at Parser.parseMaybeUnary (node_modules/@babel/parser/src/parser/expression.ts:669:23)
      at Parser.parseMaybeUnaryOrPrivate (node_modules/@babel/parser/src/parser/expression.ts:403:14)
      at Parser.parseExprOps (node_modules/@babel/parser/src/parser/expression.ts:415:23)
      at Parser.parseMaybeConditional (node_modules/@babel/parser/src/parser/expression.ts:370:23)
      at Parser.parseMaybeAssign (node_modules/@babel/parser/src/parser/expression.ts:301:21)
      at callback (node_modules/@babel/parser/src/parser/expression.ts:257:12)
      at Parser.allowInAnd (node_modules/@babel/parser/src/parser/expression.ts:3144:16)
      at Parser.parseMaybeAssignAllowIn (node_modules/@babel/parser/src/parser/expression.ts:256:17)
      at Parser.parseVar (node_modules/@babel/parser/src/parser/statement.ts:1567:18)
      at Parser.parseVarStatement (node_modules/@babel/parser/src/parser/statement.ts:1231:10)
      at Parser.parseStatementContent (node_modules/@babel/parser/src/parser/statement.ts:587:21)
      at Parser.parseStatementLike (node_modules/@babel/parser/src/parser/statement.ts:456:17)

----------------------|---------|----------|---------|---------|-------------------
File                  | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
----------------------|---------|----------|---------|---------|-------------------
All files             |       0 |        0 |       0 |       0 |                   
 TribesAgent          |       0 |        0 |       0 |       0 |                   
  websocket-server.js |       0 |        0 |       0 |       0 | 1-1910            
 TribesAgent/libs     |       0 |        0 |       0 |       0 |                   
  banish.js           |       0 |        0 |       0 |       0 | 1-114             
  chief.js            |       0 |        0 |       0 |       0 | 1-470             
  children.js         |       0 |        0 |       0 |       0 | 1-164             
  command-builders.js |       0 |        0 |       0 |       0 | 6-107             
  dice.js             |       0 |        0 |       0 |       0 | 2-19              
  endgame.js          |       0 |        0 |       0 |       0 | 1-337             
  feed.js             |       0 |        0 |       0 |       0 | 1-451             
  gather.js           |       0 |        0 |       0 |       0 | 1-112             
  general.js          |       0 |        0 |       0 |       0 | 1-306             
  guardCode.js        |       0 |        0 |       0 |       0 | 1-162             
  help.js             |       0 |      100 |       0 |       0 | 2-105             
  hunt.js             |       0 |        0 |       0 |       0 | 1-313             
  kill.js             |       0 |        0 |       0 |       0 | 1-74              
  logger.js           |       0 |      100 |       0 |       0 | 1-28              
  migrateLib.js       |       0 |        0 |       0 |       0 | 1-172             
  obey.js             |       0 |        0 |       0 |       0 | 1-48              
  population.js       |       0 |        0 |       0 |       0 | 1-525             
  profession.js       |       0 |        0 |       0 |       0 | 1-99              
  referees.js         |       0 |      100 |     100 |       0 | 1                 
  reproduction.js     |       0 |        0 |       0 |       0 | 1-1251            
  reproduction.new.js |       0 |        0 |       0 |       0 | 1-1269            
  save.js             |       0 |        0 |       0 |       0 | 1-229             
  textprocess.js      |       0 |        0 |       0 |       0 | 2-42              
  tribeHistory.js     |       0 |        0 |       0 |       0 | 1-45              
  tribesRegistry.js   |       0 |        0 |       0 |       0 | 1-69              
  util.js             |       0 |        0 |       0 |       0 | 1-83              
  violence.js         |       0 |        0 |       0 |       0 | 1-461             
  work.js             |       0 |        0 |       0 |       0 | 1-276             
----------------------|---------|----------|---------|---------|-------------------
Jest: "global" coverage threshold for statements (55%) not met: 0%
Jest: "global" coverage threshold for branches (45%) not met: 0%
Jest: "global" coverage threshold for lines (55%) not met: 0%
Jest: "global" coverage threshold for functions (55%) not met: 0%
Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        1.327 s
Ran all test suites matching /tests\/reproduction.test.js/i.
Force exiting Jest: Have you considered using `--detectOpenHandles` to detect async operations that kept running after all tests finished?
